[gd_scene load_steps=9 format=3 uid="uid://jae1j16rpg8g"]

[ext_resource type="Script" path="res://Scripts/CharMain.gd" id="1_y4tva"]
[ext_resource type="Texture2D" uid="uid://cf7jfdbhjpxbs" path="res://Sprites/girl1-Sheet.png" id="2_hxsvw"]
[ext_resource type="Texture2D" uid="uid://56wy5ev0fwr4" path="res://Sprites/energySheet.png" id="3_ng02d"]
[ext_resource type="Texture2D" uid="uid://bf1phu23j87wu" path="res://Sprites/energySheet2.png" id="4_fid2p"]
[ext_resource type="Script" path="res://Scripts/PlayerStats.gd" id="5_xc1wp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yv838"]
size = Vector2(3, 3)

[sub_resource type="Animation" id="Animation_kqm0m"]
resource_name = "default"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hudfu"]
_data = {
"default": SubResource("Animation_kqm0m")
}

[node name="Player" type="CharacterBody2D"]
position = Vector2(97, 63)
motion_mode = 1
script = ExtResource("1_y4tva")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 28

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_yv838")
metadata/_edit_lock_ = true

[node name="Girl" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_hxsvw")
hframes = 8
vframes = 4
frame = 25
metadata/_edit_lock_ = true

[node name="Pack" type="Sprite2D" parent="."]
z_index = -4
texture_filter = 1
texture = ExtResource("2_hxsvw")
hframes = 8
vframes = 4
metadata/_edit_lock_ = true

[node name="Energy1" type="Sprite2D" parent="Pack"]
z_index = -5
position = Vector2(-9, -1)
texture = ExtResource("3_ng02d")
hframes = 5
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pack/Energy1"]
speed_scale = 2.0
method_call_mode = 1
libraries = {
"": SubResource("AnimationLibrary_hudfu")
}

[node name="Energy2" type="Sprite2D" parent="Pack"]
z_index = -5
position = Vector2(5, -2)
texture = ExtResource("4_fid2p")
hframes = 5
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pack/Energy2"]
speed_scale = 2.0
method_call_mode = 1
libraries = {
"": SubResource("AnimationLibrary_hudfu")
}

[node name="Gun" type="Sprite2D" parent="."]
z_index = -2
texture_filter = 1
texture = ExtResource("2_hxsvw")
hframes = 8
vframes = 4
frame = 16
metadata/_edit_lock_ = true

[node name="Hands" type="Sprite2D" parent="."]
z_index = -3
texture_filter = 1
texture = ExtResource("2_hxsvw")
hframes = 8
vframes = 4
frame = 8
metadata/_edit_lock_ = true

[node name="SpawnShot" type="Node2D" parent="."]
position = Vector2(20.647, -3)

[node name="Stats" type="Node" parent="."]
script = ExtResource("5_xc1wp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_yv838")
metadata/_edit_lock_ = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
